first commit with yaay!

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^3.0.1
   cloud_firestore: ^3.4.7
   email_validator: ^2.1.17
+  firebase_storage: ^10.3.8
 
 dev_dependencies:
   flutter_test:
