--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   email_validator: ^2.1.17
   firebase_storage: ^10.3.8
   flutter_native_splash: ^2.2.9
+  curved_navigation_bar: ^1.0.3 #latest version
+  toast: ^0.3.0
+
+
 
 
 flutter_native_splash:
@@ -53,6 +57,14 @@ flutter_native_splash:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.10.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: 'assets/icon.png'
+  adaptive_icon_background: '#ffffff'
+  adaptive_icon_foreground: 'assets/icon2.png'
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
