--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   flutter_native_splash: ^2.2.9
   curved_navigation_bar: ^1.0.3 #latest version
   toast: ^0.3.0
-
+  pay: ^1.0.11
 
 
 
